--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/course-spring-boot
+spring.datasource.username=postgres
+spring.datasource.password=123456789
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+#Manage lob file configuration from JPA
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
